# relayhistory

./: .gitignore  Cargo.toml  DISPATCH_MATRIX.md  README.md  WS9_SCAFFOLD_PLAN.md  ai-hist  ai-hist-python  ai-hist-rust  install.sh  test_ai_hist.py  test_cli_dispatch.py  test_install.py
.github/workflows/: ci.yml  publish-bin-packages.yml  publish-napi.yml  publish.yml  release-binaries.yml
bin-packages/ai-hist-bin-darwin-arm64/: README.md  package.json
bin-packages/ai-hist-bin-darwin-x64/: README.md  package.json
bin-packages/ai-hist-bin-linux-arm64/: README.md  package.json
bin-packages/ai-hist-bin-linux-x64/: README.md  package.json
crates/ai-hist/: Cargo.toml
crates/ai-hist-core/src/: convergence.rs  lib.rs  outbox.rs
crates/ai-hist-napi/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/ai-hist-napi/src/: lib.rs
crates/ai-hist/src/: cloud.rs  learn.rs  lib.rs  main.rs
docs/: agent-integration.md  cloud-sync.md  getting-started.md  pair-hooks.md  reflex-zero-setup.md  substrate-improvements-proposal.md
docs/cloud/: architecture.md  browser-security.md  compliance.md  data-rights.md  encryption.md  overview.md  roadmap.md
examples/hooks/: pair-check-hook.mjs
mcp-package/: README.md  package.json
memory/workspace/.relay/: state.json
scripts/: verify-e2e.sh
sdk-ts/: CHANGELOG.md  README.md  package-lock.json  package.json
sdk-ts/src/: cloud-client.ts  cloud-push.test.ts  cloud-push.ts  index.ts  jsonl-sources.ts  mcp-server.ts  mcp-smoke.test.ts  pair-client.test.ts  pair-client.ts  trajectory-sources.ts
workflows/: build-relayhistory-cli-sync.ts
