[package]
name = "ai-hist-napi"
version = "0.4.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ai-hist-cli = { path = "../ai-hist" }
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
