[package]
name = "ai-hist-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ai-hist"
path = "src/main.rs"

[dependencies]
ai-hist-core = { path = "../ai-hist-core" }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
rusqlite = { version = "0.32", features = ["backup", "bundled", "functions"] }
serde_json = "1"
