[package]
name = "ai-hist-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ai-hist"
path = "src/main.rs"

[dependencies]
ai-hist-core = { path = "../ai-hist-core" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"

