[package]
name = "ai-hist-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ai-hist"
path = "src/main.rs"

[dependencies]
ai-hist-core = { path = "../ai-hist-core" }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
rusqlite = { version = "0.32", features = ["backup", "bundled", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
